--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/fonts.css"/>
-    <link rel="stylesheet" href="styles/global.css"/>
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -20,12 +20,14 @@
           <li class="header__link"><a href="#">об аукционе</a></li>
         </ul>
       </nav>
-      <a><img src="images/logo-black.svg" alt="logo" class="logo logo-black"/></a>
+      <a
+        ><img src="images/logo-black.svg" alt="logo" class="logo logo-black"
+      /></a>
       <address class="address header-address">
         <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>
-          наб. Принсенграхт 263-265,<br/>
+          наб. Принсенграхт 263-265,<br />
           Амстердам
         </p>
       </address>
@@ -53,15 +55,17 @@
             <ul class="lots__card-list-item overlay">
               <li>
                 <h3>
-                <a href="#" class="card-link"
-                  >фильм режиссёра, который бросил киношколу</a>
-              </h3>
-            </li>
+                  <a href="#" class="card-link"
+                    >фильм режиссёра, который бросил киношколу</a
+                  >
+                </h3>
+              </li>
               <li>
                 <p>
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр -- Пол Томас Андерсон?
-              </p>
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр -- Пол Томас
+                  Андерсон?
+                </p>
               </li>
             </ul>
           </article>
@@ -69,39 +73,41 @@
             <ul class="lots__card-list-item overlay">
               <li>
                 <h3>
-                <a href="#" class="card-link"
-                  >Книга, где описан один скучный день из жизни рекламного
-                  агента</a>
-              </h3>
+                  <a href="#" class="card-link"
+                    >Книга, где описан один скучный день из жизни рекламного
+                    агента</a
+                  >
+                </h3>
               </li>
               <li>
                 <p>
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </li>
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </li>
             </ul>
           </article>
           <article class="card card_type_picture">
             <ul class="lots__card-list-item overlay">
               <li>
-              <h3>
-                <a href="#" class="card-link"
-                  >Картина, которую повторит даже 5-летний сын маминой
-                  подруги</a>
-              </h3>
+                <h3>
+                  <a href="#" class="card-link"
+                    >Картина, которую повторит даже 5-летний сын маминой
+                    подруги</a
+                  >
+                </h3>
               </li>
-              <li>              
-              <p>
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков... Сколько бы вы на такое поставили, если бы не знали,
-                что это -- одна из революционных работ Кандинского?
-              </p>
+              <li>
+                <p>
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это -- одна из революционных работ Кандинского?
+                </p>
               </li>
             </ul>
           </article>
@@ -158,10 +164,13 @@
       </nav>
       <ul class="footer-socials">
         <li>
-          <a href="#"><img src="images/pinterest.svg"
+          <a href="#"
+            ><img
+              src="images/pinterest.svg"
               alt="pinterest"
               width="48"
-              height="48"/></a>
+              height="48"
+          /></a>
         </li>
         <li>
           <a href="#"
