--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <header class="header">
       <nav class="nav header-nav">
         <ul class="menu header-menu">
-          <li class="header__link header__link_active">
-            <a href="#">главная</a>
+          <li class="header__links-list-item_no-bullit">
+            <a href="#" class="header__link header__link_active">главная</a>
           </li>
-          <li class="header__link"><a href="#">посмотреть лоты</a></li>
-          <li class="header__link"><a href="#">об аукционе</a></li>
+          <li class="header__links-list-item">
+            <a href="#" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#" class="header__link">об аукционе</a>
+          </li>
         </ul>
       </nav>
       <a
@@ -34,7 +38,8 @@
     </header>
     <main>
       <section class="cover">
-        <div class="overlay">
+        <div class="overlay"></div>
+        <div class="cover-content">
           <h1 class="cover__title">
             <span class="aligned-text aligned-text_left">оно</span>
             <span class="aligned-text aligned-text_center">тебе</span>
@@ -50,68 +55,64 @@
       </section>
       <section class="lots">
         <h2 class="title title__lots">лоты</h2>
-        <div class="lots__card-list">
-          <article class="card card_type_film">
-            <ul class="lots__card-list-item overlay">
-              <li>
-                <h3>
-                  <a href="#" class="card-link"
-                    >фильм режиссёра, который бросил киношколу</a
-                  >
-                </h3>
-              </li>
-              <li>
-                <p>
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр -- Пол Томас
-                  Андерсон?
-                </p>
-              </li>
-            </ul>
-          </article>
-          <article class="card card_type_book">
-            <ul class="lots__card-list-item overlay">
-              <li>
-                <h3>
-                  <a href="#" class="card-link"
-                    >Книга, где описан один скучный день из жизни рекламного
-                    агента</a
-                  >
-                </h3>
-              </li>
-              <li>
-                <p>
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
-              </li>
-            </ul>
-          </article>
-          <article class="card card_type_picture">
-            <ul class="lots__card-list-item overlay">
-              <li>
-                <h3>
-                  <a href="#" class="card-link"
-                    >Картина, которую повторит даже 5-летний сын маминой
-                    подруги</a
-                  >
-                </h3>
-              </li>
-              <li>
-                <p>
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это -- одна из революционных работ Кандинского?
-                </p>
-              </li>
-            </ul>
-          </article>
-        </div>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="" class="card_link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <div class="card_content">
+                  <h3 class="card_title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="" class="card_link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <div class="card_content">
+                  <h3 class="card_title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h3>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="" class="card_link">
+              <div class="overlay"></div>
+              <article class="card card_type_picture">
+                <div class="card_content">
+                  <h3 class="card_title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3>
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков... Сколько бы вы на такое поставили, если бы не
+                    знали, что это — одна из революционных работ Кандинского?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+        </ul>
         <a href="#" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
@@ -157,9 +158,13 @@
       </address>
       <nav>
         <ul class="menu menu-footer">
-          <li><a href="#">главная</a></li>
-          <li><a href="#">посмотреть лоты</a></li>
-          <li><a href="#">об аукционе</a></li>
+          <li>
+            <a href="#" class="footer__menu-link footer__menu-link_active"
+              >главная</a
+            >
+          </li>
+          <li><a href="#" class="footer__menu-link"> посмотреть лоты</a></li>
+          <li><a href="#" class="footer__menu-link">об аукционе</a></li>
         </ul>
       </nav>
       <ul class="footer-socials">
