--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@
       <address class="address header-address">
         <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-        <p>
-          наб. Принсенграхт 263-265,<br />
-          Амстердам
-        </p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
-        <div class="overlay"></div>
-        <div class="cover-content">
+        <div class="cover-content overlay">
           <h1 class="cover__title">
             <span class="aligned-text aligned-text_left">оно</span>
             <span class="aligned-text aligned-text_center">тебе</span>
@@ -59,8 +55,7 @@
           <li class="lots__card-list-item">
             <a href="" class="card_link">
               <article class="card card_type_film">
-                <div class="overlay"></div>
-                <div class="card_content">
+                <div class="card_content overlay">
                   <h3 class="card_title">
                     Фильм режиссёра, который бросил киношколу
                   </h3>
@@ -76,8 +71,7 @@
           <li class="lots__card-list-item">
             <a href="" class="card_link">
               <article class="card card_type_book">
-                <div class="overlay"></div>
-                <div class="card_content">
+                <div class="card_content overlay">
                   <h3 class="card_title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
@@ -96,9 +90,8 @@
           </li>
           <li class="lots__card-list-item">
             <a href="" class="card_link">
-              <div class="overlay"></div>
               <article class="card card_type_picture">
-                <div class="card_content">
+                <div class="card_content overlay">
                   <h3 class="card_title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
                   </h3>
@@ -148,7 +141,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address header-address">
+      <address class="address footer-address">
         <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
         <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>
