attempt 4 v.2. .overlay переделан в отдельный класс

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
     </header>
     <main>
       <section class="cover">
-        <div class="cover-content overlay">
-          <h1 class="cover__title">
-            <span class="aligned-text aligned-text_left">оно</span>
-            <span class="aligned-text aligned-text_center">тебе</span>
-            <span class="aligned-text aligned-text_right">надо</span>
-          </h1>
-          <div class="description">
-            <p class="subline">аукцион вещей, в которые никто не верил</p>
-            <p>
-              <a href="#" class="button bet">сделать ставку</a>
-            </p>
-          </div>
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_left">оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+        <div class="description">
+          <p class="subline">аукцион вещей, в которые никто не верил</p>
+          <p>
+            <a href="#" class="button bet">сделать ставку</a>
+          </p>
         </div>
       </section>
       <section class="lots">
@@ -55,7 +54,8 @@
           <li class="lots__card-list-item">
             <a href="" class="card_link">
               <article class="card card_type_film">
-                <div class="card_content overlay">
+                <div class="overlay"></div>
+                <div class="card_content">
                   <h3 class="card_title">
                     Фильм режиссёра, который бросил киношколу
                   </h3>
@@ -71,7 +71,8 @@
           <li class="lots__card-list-item">
             <a href="" class="card_link">
               <article class="card card_type_book">
-                <div class="card_content overlay">
+                <div class="overlay"></div>
+                <div class="card_content">
                   <h3 class="card_title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
@@ -91,7 +92,8 @@
           <li class="lots__card-list-item">
             <a href="" class="card_link">
               <article class="card card_type_picture">
-                <div class="card_content overlay">
+                <div class="overlay"></div>
+                <div class="card_content">
                   <h3 class="card_title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
                   </h3>
